tests/EtaX/EtaX.boom/EtaX.boom.3.0.check
// exitCode: 1   new A().boom // ?/?/err: apply, ()-insertion
-- [E100] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.boom/EtaX.boom/EtaX.boom.00.scala:4:10 
4 |  new A().boom // ?/?/err: apply, ()-insertion
  |  ^^^^^^^^^^^^
  |  method boom must be called with () argument

Explanation
===========
Previously an empty argument list () was implicitly inserted when calling a nullary method without arguments. E.g.

def next(): T = ...
          |next     // is expanded to next()

In Dotty, this idiom is an error. The application syntax has to follow exactly the parameter syntax.
Excluded from this rule are methods that are defined in Java or that override methods defined in Java.

1 error found
